deploy/overlays/minikube/fake-telegram/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fake-telegram-server
  namespace: channels
spec:
  selector:
    app: fake-telegram-server
  ports:
    - port: 8080
      targetPort: 8080
